--- a/src/app/pages/email-templates-page/email-templates-index/email-templates-shared/email-templates-shared.component.html
+++ b/src/app/pages/email-templates-page/email-templates-index/email-templates-shared/email-templates-shared.component.html
@@ -1,5 +1,5 @@
-<md-card class="entity-index__card">
-  <md-card-content class="entity-index__card__content">
+<mat-card class="entity-index__card">
+  <mat-card-content class="entity-index__card__content">
     <entities-table
       [data]="entities"
       [loaded]="initialLoaded"
@@ -30,5 +30,5 @@
       (searchChanged)="setSearchString($event)"
     >
     </entities-table>
-  </md-card-content>
-</md-card>
+  </mat-card-content>
+</mat-card>
