--- a/src/app/pages/roles-page/roles-index/roles-index-custom/roles-index-custom.component.html
+++ b/src/app/pages/roles-page/roles-index/roles-index-custom/roles-index-custom.component.html
@@ -1,7 +1,7 @@
 <button md-icon-button color="primary" *ngIf="hasWritePermission()" class="entity-index__add" (click)="addSelected.emit(true)"><mat-icon>add</mat-icon></button>
 
-<md-card class="entity-index__card">
-  <md-card-content class="entity-index__card__content">
+<mat-card class="entity-index__card">
+  <mat-card-content class="entity-index__card__content">
 
     <entities-table
       [data]="entities"
@@ -30,5 +30,5 @@
       (searchChanged)="setSearchString($event)"
     >
     </entities-table>
-  </md-card-content>
-</md-card>
+  </mat-card-content>
+</mat-card>
