--- a/src/app/pages/shipping-receipts-page/shipping-receipts-index/shipping-receipts.component.html
+++ b/src/app/pages/shipping-receipts-page/shipping-receipts-index/shipping-receipts.component.html
@@ -3,8 +3,8 @@
     {{'SHIPPINGRECEIPT_INDEX_TITLE' | translate}}
   </div>
 
-  <md-card class="entity-index__card">
-    <md-card-content class="entity-index__card__content">
+  <mat-card class="entity-index__card">
+    <mat-card-content class="entity-index__card__content">
 
       <entities-table
         [data]="entities"
@@ -35,6 +35,6 @@
       >
       </entities-table>
 
-    </md-card-content>
-  </md-card>
+    </mat-card-content>
+  </mat-card>
 </div>
