--- a/src/assets/scss/_cards.scss
+++ b/src/assets/scss/_cards.scss
@@ -1,16 +1,16 @@
-md-card {
+mat-card {
   margin-bottom: 20px;
 
   &.card-toolbar {
     padding: 0;
 
-    > md-card-content {
+    > mat-card-content {
       padding: 24px;
     }
   }
 }
 
-md-dialog-container md-card, .md-tab-body md-card {
+md-dialog-container mat-card, .md-tab-body mat-card {
   box-shadow: none;
   margin-bottom: 0;
 
@@ -37,7 +37,7 @@ md-dialog-container md-card, .md-tab-body md-card {
   }
 }
 
-md-card.widget {
+mat-card.widget {
   margin: 8px;
   padding: 16px;
   background: linear-gradient(#385F8D, #171F38);
