--- a/src/assets/scss/_transaction-view.scss
+++ b/src/assets/scss/_transaction-view.scss
@@ -135,7 +135,7 @@ $card-title-color: #5B9BE1;
       cursor: pointer;
     }
 
-    md-card {
+    mat-card {
       padding: 0 0 20px 0;
       margin: 5px;
     }
