--- a/src/app/pages/credit-cards-page/credit-cards-index/credit-cards.component.html
+++ b/src/app/pages/credit-cards-page/credit-cards-index/credit-cards.component.html
@@ -5,8 +5,8 @@
 
   <button md-icon-button color="primary" *ngIf="hasWritePermission()" (click)="openAddMode()" class="entity-index__add"><mat-icon>add</mat-icon></button>
 
-  <md-card class="entity-index__card">
-    <md-card-content class="entity-index__card__content">
+  <mat-card class="entity-index__card">
+    <mat-card-content class="entity-index__card__content">
       <entities-table
         [data]="entities"
         [loaded]="initialLoaded"
@@ -35,8 +35,8 @@
         (searchChanged)="setSearchString($event)"
       >
       </entities-table>
-    </md-card-content>
-  </md-card>
+    </mat-card-content>
+  </mat-card>
 </div>
 
 <div *ngIf="addMode" (click)="overlayClicked($event)" class="full-overlay">
