--- a/src/app/pages/event-hooks-page/event-hook-index/event-hooks-custom/event-hooks-custom.component.html
+++ b/src/app/pages/event-hooks-page/event-hook-index/event-hooks-custom/event-hooks-custom.component.html
@@ -1,7 +1,7 @@
 <button md-icon-button color="primary" *ngIf="hasWritePermission()" (click)="addSelected.emit(true)" class="entity-index__add"><mat-icon>add</mat-icon></button>
 
-<md-card class="entity-index__card">
-  <md-card-content class="entity-index__card__content">
+<mat-card class="entity-index__card">
+  <mat-card-content class="entity-index__card__content">
 
     <entities-table
       [data]="entities"
@@ -33,5 +33,5 @@
     >
     </entities-table>
 
-  </md-card-content>
-</md-card>
+  </mat-card-content>
+</mat-card>
