--- a/src/app/pages/rebills-page/rebills-index/rebills.component.html
+++ b/src/app/pages/rebills-page/rebills-index/rebills.component.html
@@ -3,8 +3,8 @@
     {{'REBILL_INDEX_TITLE' | translate}}
   </div>
 
-  <md-card class="entity-index__card">
-    <md-card-content class="entity-index__card__content">
+  <mat-card class="entity-index__card">
+    <mat-card-content class="entity-index__card__content">
 
       <entities-table
         [data]="entities"
@@ -34,7 +34,7 @@
         (searchChanged)="setSearchString($event)"
       >
       </entities-table>
-    </md-card-content>
-  </md-card>
+    </mat-card-content>
+  </mat-card>
 </div>
 
