--- a/src/assets/scss/_customer-view.scss
+++ b/src/assets/scss/_customer-view.scss
@@ -31,7 +31,7 @@ $default-padding: 14px 12px 6px;
     padding: 0;
     box-sizing: border-box;
 
-    md-card-title {
+    mat-card-title {
       position: relative;
       margin-bottom: 0;
       color: rgba(0, 0, 0, 0.4);
@@ -61,7 +61,7 @@ $default-padding: 14px 12px 6px;
       }
     }
 
-    md-card-content {
+    mat-card-content {
       padding: 5px 12px 16px;
     }
 
@@ -375,7 +375,7 @@ $default-padding: 14px 12px 6px;
     }
   }
 
-  md-card-content {
+  mat-card-content {
     overflow-y: auto;
     max-height: 225px;
   }
@@ -389,7 +389,7 @@ customer-notes {
       max-height: 300px;
     }
 
-    md-card-content {
+    mat-card-content {
       padding: 0;
     }
 
@@ -456,7 +456,7 @@ customer-notes {
       }
     }
 
-    md-card-title {
+    mat-card-title {
       padding: $default-padding;
       border-bottom: none;
     }
