--- a/src/assets/scss/_search.scss
+++ b/src/assets/scss/_search.scss
@@ -457,9 +457,9 @@ $border-color: rgba(0, 0, 0, 0.2);
       }
     }
 
-    md-card {
+    mat-card {
 
-      md-card-title {
+      mat-card-title {
         padding-bottom: 5px;
         border-bottom: solid 1px #B2B2B2;
 
