Upgrade angular material progress and tabs

--- a/src/app/authentication/terms-and-conditions/terms-and-conditions.component.html
+++ b/src/app/authentication/terms-and-conditions/terms-and-conditions.component.html
@@ -1,6 +1,6 @@
 <div class="terms-and-conditions__container">
 
-  <md-progress-bar class="progress-bar" *ngIf="http.requestInProgress$ | async" mode="query"></md-progress-bar>
+  <mat-progress-bar class="progress-bar" *ngIf="http.requestInProgress$ | async" mode="query"></mat-progress-bar>
 
   <div class="terms-and-conditions__header">
     <img class="terms-and-conditions__header__logo" src="/assets/images/logo-white-small.svg" alt="">
