--- a/src/app/pages/trackers-page/tracker-view/tracker-view.component.html
+++ b/src/app/pages/trackers-page/tracker-view/tracker-view.component.html
@@ -14,13 +14,13 @@
   </div>
   <tab-header [elements]="tabHeaders" [selectedIndex]="selectedIndex" (select)="setIndex($event)"></tab-header>
 
-  <md-tab-group [(selectedIndex)]="selectedIndex">
-    <md-tab>
+  <mat-tab-group [(selectedIndex)]="selectedIndex">
+    <mat-tab>
 
       <tracker-add-new [entity]="entity" [mode]="viewMode ? modes.View : modes.Update" (changeMode)="setMode($event)" (save)="saveOrUpdate($event)" (cancel)="cancelUpdate()"></tracker-add-new>
 
-    </md-tab>
-    <md-tab>
+    </mat-tab>
+    <mat-tab>
       <table-memory [data]="entity.affiliates"
                     [columnParams]="affiliateColumnParams"
                     [associateData]="affiliateService.entities$ | async"
@@ -30,9 +30,9 @@
                     (associate)="associateAffiliate($event)"
                     (disassociate)="dissociateAffiliate($event)">
       </table-memory>
-    </md-tab>
+    </mat-tab>
 
-    <md-tab>
+    <mat-tab>
       <table-memory [data]="entity.campaigns"
                     [columnParams]="campaignColumnParams"
                     [associateData]="campaignService.entities$ | async"
@@ -42,8 +42,8 @@
                     (associate)="associateCampaign($event)"
                     (disassociate)="dissociateCampaign($event)">
       </table-memory>
-    </md-tab>
-  </md-tab-group>
+    </mat-tab>
+  </mat-tab-group>
 </div>
 
 <ng-template #spinner>
