--- a/src/app/pages/users-page/user-view/user-view.component.html
+++ b/src/app/pages/users-page/user-view/user-view.component.html
@@ -15,8 +15,8 @@
 
   <tab-header [elements]="tabHeaders" [selectedIndex]="selectedIndex" (select)="setIndex($event)"></tab-header>
 
-  <md-tab-group [(selectedIndex)]="selectedIndex">
-    <md-tab>
+  <mat-tab-group [(selectedIndex)]="selectedIndex">
+    <mat-tab>
 
       <div class="flex-custom flex-custom--wrap">
 
@@ -47,8 +47,8 @@
         </table-memory>
       </div>
 
-    </md-tab>
-  </md-tab-group>
+    </mat-tab>
+  </mat-tab-group>
 </div>
 
 <ng-template #spinner>
