--- a/src/app/shared/components/spe-loader-body/spe-loader-body.component.html
+++ b/src/app/shared/components/spe-loader-body/spe-loader-body.component.html
@@ -4,8 +4,8 @@
       </span>
 </div>
 
-<md-tab-group>
-  <md-tab>
+<mat-tab-group>
+  <mat-tab>
 
     <div class="flex-custom" [class.flex-custom--wrap]="wrap">
       <div *ngFor="let c of cards"
@@ -23,5 +23,5 @@
         </div>
       </div>
     </div>
-  </md-tab>
-</md-tab-group>
+  </mat-tab>
+</mat-tab-group>
