--- a/src/assets/scss/_cards.scss
+++ b/src/assets/scss/_cards.scss
@@ -10,7 +10,7 @@ mat-card {
   }
 }
 
-md-dialog-container mat-card, .md-tab-body mat-card {
+md-dialog-container mat-card, .mat-tab-body mat-card {
   box-shadow: none;
   margin-bottom: 0;
 
