--- a/src/assets/scss/_search.scss
+++ b/src/assets/scss/_search.scss
@@ -3,7 +3,7 @@ $border-color: rgba(0, 0, 0, 0.2);
 
 .search {
 
-  .md-tab-label-container {
+  .mat-tab-label-container {
     display: none;
   }
 
