--- a/src/app/pages/campaigns-page/campaign-view/campaign-view.component.html
+++ b/src/app/pages/campaigns-page/campaign-view/campaign-view.component.html
@@ -19,8 +19,8 @@
 
     <tab-header [elements]="tabHeaders" [selectedIndex]="selectedIndex" (select)="setIndex($event)"></tab-header>
 
-    <md-tab-group [(selectedIndex)]="selectedIndex">
-      <md-tab>
+    <mat-tab-group [(selectedIndex)]="selectedIndex">
+      <mat-tab>
 
         <div class="flex-custom flex-custom--wrap">
 
@@ -44,9 +44,9 @@
           </table-memory>
         </div>
 
-      </md-tab>
+      </mat-tab>
 
-      <md-tab>
+      <mat-tab>
         <table-memory
           [data]="entity.productSchedules"
           [columnParams]="productScheduleColumnParams"
@@ -57,9 +57,9 @@
           (disassociate)="disassociateProductSchedule($event)"
           (view)="viewProductSchedule($event)">
         </table-memory>
-      </md-tab>
+      </mat-tab>
 
-      <md-tab>
+      <mat-tab>
         <div class="flex-custom">
           <table-memory
             class="campaign-view__affiliate-table"
@@ -89,12 +89,12 @@
           >
           </table-memory>
         </div>
-      </md-tab>
+      </mat-tab>
 
-      <md-tab>
+      <mat-tab>
         <pixel-tracker [campaignId]="entityId"></pixel-tracker>
-      </md-tab>
-    </md-tab-group>
+      </mat-tab>
+    </mat-tab-group>
 
 </div>
 
