--- a/src/app/pages/credit-cards-page/credit-card-view/credit-card-view.component.html
+++ b/src/app/pages/credit-cards-page/credit-card-view/credit-card-view.component.html
@@ -17,8 +17,8 @@
 
   <tab-header [elements]="tabHeaders" [selectedIndex]="selectedIndex" (select)="setIndex($event)"></tab-header>
 
-  <md-tab-group [(selectedIndex)]="selectedIndex">
-    <md-tab>
+  <mat-tab-group [(selectedIndex)]="selectedIndex">
+    <mat-tab>
       <credit-card-input
         [creditCard]="entity"
         [viewMode]="isViewMode"
@@ -27,9 +27,9 @@
         (edit)="enterEditMode()"
         (cancel)="doCancel()">
       </credit-card-input>
-    </md-tab>
+    </mat-tab>
 
-    <md-tab>
+    <mat-tab>
       <table-memory
         [data]="entity.customers"
         [columnParams]="customerColumnParams"
@@ -38,9 +38,9 @@
         [associationEnabled]="false"
         (view)="viewCustomer($event)">
       </table-memory>
-    </md-tab>
+    </mat-tab>
 
-  </md-tab-group>
+  </mat-tab-group>
 </div>
 
 <ng-template #spinner>
