--- a/src/app/pages/fulfillment-providers/fulfillment-provider-view/fulfillment-provider-view.component.html
+++ b/src/app/pages/fulfillment-providers/fulfillment-provider-view/fulfillment-provider-view.component.html
@@ -17,8 +17,8 @@
 
   <tab-header [elements]="tabHeaders" [selectedIndex]="selectedIndex" (select)="setIndex($event)"></tab-header>
 
-  <md-tab-group [(selectedIndex)]="selectedIndex">
-    <md-tab>
+  <mat-tab-group [(selectedIndex)]="selectedIndex">
+    <mat-tab>
 
       <fulfillment-provider-add-new [entity]="entity"
                                     [mode]="viewMode ? modes.View : modes.Update"
@@ -27,13 +27,13 @@
                                     (save)="saveOrUpdate($event)">
       </fulfillment-provider-add-new>
 
-    </md-tab>
+    </mat-tab>
 
-    <md-tab>
+    <mat-tab>
       <fulfillment-provider-validation [entity]="entity"></fulfillment-provider-validation>
-    </md-tab>
+    </mat-tab>
 
-  </md-tab-group>
+  </mat-tab-group>
 </div>
 
 <ng-template #spinner>
