--- a/src/app/pages/products-page/product-view/product-view.component.html
+++ b/src/app/pages/products-page/product-view/product-view.component.html
@@ -17,8 +17,8 @@
 
   <tab-header [elements]="tabHeaders" [selectedIndex]="selectedIndex" (select)="setIndex($event)"></tab-header>
 
-  <md-tab-group [(selectedIndex)]="selectedIndex">
-    <md-tab>
+  <mat-tab-group [(selectedIndex)]="selectedIndex">
+    <mat-tab>
       <div class="flex-custom">
         <product-add-new (changeMode)="setMode($event)"
                          (cancel)="cancelProductUpdate()"
@@ -30,32 +30,32 @@
 
         <product-attributes [attributes]="entityAttributes" [mode]="viewMode ? modes.View : modes.Update"></product-attributes>
       </div>
-    </md-tab>
+    </mat-tab>
 
-    <md-tab>
+    <mat-tab>
       <product-images
         [images]="entity.attributes.images"
         (imageUploaded)="addNewImage($event)"
         (imageDeleted)="deleteImage($event)"
         (imageUpdated)="updateImage($event)">
       </product-images>
-    </md-tab>
+    </mat-tab>
 
-    <md-tab>
+    <mat-tab>
       <product-product-schedules [id]="entity.id"
                                  [defaultPrice]="entity.defaultPrice"
                                  (allEntities)="setCanNotBeDeleted($event)">
       </product-product-schedules>
-    </md-tab>
+    </mat-tab>
 
-    <md-tab>
+    <mat-tab>
       <product-campaigns [id]="entity.id"></product-campaigns>
-    </md-tab>
+    </mat-tab>
 
-    <md-tab>
+    <mat-tab>
       <product-merchant-provider-group-associations [id]="entity.id"></product-merchant-provider-group-associations>
-    </md-tab>
-  </md-tab-group>
+    </mat-tab>
+  </mat-tab-group>
 </div>
 
 <ng-template #spinner>
