--- a/src/app/pages/search-page/search.component.html
+++ b/src/app/pages/search-page/search.component.html
@@ -4,8 +4,8 @@
     <div class="search__header__item" [class.search__header__item--active]="selectedIndex === 1" (click)="setIndex(1)">{{'SEARCH_TAB_ORDER' | translate}}</div>
   </div>
 
-  <md-tab-group [(selectedIndex)]="selectedIndex">
-    <md-tab>
+  <mat-tab-group [(selectedIndex)]="selectedIndex">
+    <mat-tab>
       <div class="search__layout" [class.search__layout--customer-service]="authService.isActiveAclCustomerService()">
         <div class="search__sidenav">
           <md-nav-list>
@@ -175,10 +175,10 @@
   </div>
       </div>
 
-    </md-tab>
+    </mat-tab>
 
-    <md-tab>
+    <mat-tab>
       <coming-soon [inPage]="true"></coming-soon>
-    </md-tab>
-  </md-tab-group>
+    </mat-tab>
+  </mat-tab-group>
 </div>
